EXTRA_DIST = \
fusexmp_fh_defperm.out \
fusexmp_fh_direct_io.out \
fusexmp_fh_kernel_cache.out \
fusexmp_fh.out \
fusexmp_fh_s.out \
fusexmp.out \
gfarmfs_b_direct_io.out \
gfarmfs_b.out \
gfarmfs_defperm.out \
gfarmfs_direct_io.out \
gfarmfs_N2.out \
gfarmfs_nlsu.out \
gfarmfs_noopt.out \
gfarmfs_attr0.out \
gfarmfs_oldio.out \
gfarmfs_oldio_b.out \
gfarmfs_oldio_F.out \
slashtmp.out
